--- a/slides.html
+++ b/slides.html
@@ -441,7 +441,9 @@ Resources:
 
 ### Thank you! 
 
-*ome of the code available:
+Some of the code available: https://github.com/kasparmartens/2018_10_gganimate
+
+.footnote[Kaspar Märtens (@kasparmartens)]
     </textarea>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
 <script src="gifffer.min.js"></script>
