--- a/slides.html
+++ b/slides.html
@@ -199,7 +199,7 @@ gapminder %&gt;%
 
 * `enter_*`, `exit_*`
 
-* `ease_aes*`
+* `ease_aes`
 ]
 
 ---
@@ -356,6 +356,43 @@ Defines how data should be interpolated (uses the tweenr package under the hood)
 
 ![](fig/bounce.gif)
 ]
+
+---
+# Recap: the new grammar
+
+.pull-left[
+### ggplot2
+
+* `aes`
+
+* `geom_*`
+
+* `stat_*`
+
+* `position_*`
+
+* `scale_*`
+
+* `coord_*`
+
+* `facet_*`
+]
+
+.pull-right[
+### gganimate
+
+* `transition_*`
+
+* `view_*`
+
+* `shadow_*`
+
+* `enter_*`, `exit_*`
+
+* `ease_aes`
+]
+
+
 ---
 # Back to the gapminder example
 
@@ -438,7 +475,7 @@ Resources:
 
 ### Thank you! 
 
-Some of the code available: https://github.com/kasparmartens/2018_10_gganimate
+Slides and some code examples available: https://github.com/kasparmartens/2018_10_gganimate
 
 .footnote[Kaspar Märtens (@kasparmartens)]
     </textarea>
